--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,27 @@
-cmake_minimum_required(VERSION 3.14)
-project(bulk)
+cmake_minimum_required(VERSION 3.5)
 
-set(CMAKE_CXX_STANDARD 14)
+set( PRO_PATCH $ENV{TRAVIS_BUILD_NUMBER})
+if (NOT "${PRO_PATCH}")
+  set(PRO_PATCH "1")
+endif (NOT "${PRO_PATCH}")
+
+project(bulk VERSION 0.0.${PRO_PATCH})
 
 add_executable(bulk main.cpp observer.h)
+
+set_target_properties(
+  bulk PROPERTIES
+  CXX_STANDARD 14
+  CXX_STANDARD_REQUIRED ON
+)
+
+install(TARGETS bulk RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+set(CPACK_PACKAGE_NAME bulk)
+set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+set(CPACK_PACKAGE_CONTACT mr.alligator@yandex.ru)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+include(CPack)
